--- a/app/src/main/res/layout/activity_live_camera.xml
+++ b/app/src/main/res/layout/activity_live_camera.xml
@@ -17,6 +17,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/overlayView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        android:alpha="0.75"
+        android:contentDescription="@string/overlay_description"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.705"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.364"
+        app:srcCompat="@drawable/body_upright" />
+
     <ImageButton
         android:id="@+id/captureCameraButton"
         android:layout_width="60dp"
