--- a/app/src/main/res/layout/activity_live_camera.xml
+++ b/app/src/main/res/layout/activity_live_camera.xml
@@ -28,8 +28,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/body_upright" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/captureCameraButton"
